src/test/deca/syntax/valid/parser/debug-protected.deca
// Description:
//    Programme avec objet
//
// Resultats:
//    a.x
//
// Historique:
//    cree le 10/01/2022
//    par Caroline

{
    protected int x;
}