src/test/deca/syntax/invalid/manque_op_mult.deca
// Manque opérande à *

// Date: 20.01.2022

{
int a = *2;
}